cicd/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-prod
